--- a/NewGeneUI/NewGene/CreateOutput/SelectVariables/VariableSummary/newgenevariablesummary.ui
+++ b/NewGeneUI/NewGene/CreateOutput/SelectVariables/VariableSummary/newgenevariablesummary.ui
@@ -14,28 +14,60 @@
    <string>Form</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="spacing">
+    <number>0</number>
+   </property>
+   <property name="margin">
+    <number>0</number>
+   </property>
    <item>
-    <widget class="NewGeneVariableSummaryHolder" name="widgetHolder1" native="true"/>
+    <widget class="QLabel" name="label">
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QLabel
+{
+	background-color : #b1b1ff;
+	font-weight: bold;
+	font-size: 16px;
+}</string>
+     </property>
+     <property name="text">
+      <string>Variable Summary</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+     <property name="textInteractionFlags">
+      <set>Qt::NoTextInteraction</set>
+     </property>
+    </widget>
    </item>
    <item>
-    <widget class="NewGeneVariableSummaryHolder" name="widgetHolder2" native="true"/>
-   </item>
-   <item>
-    <widget class="NewGeneVariableSummaryHolder" name="widgetHolder3" native="true"/>
-   </item>
-   <item>
-    <widget class="NewGeneVariableSummaryHolder" name="widgetHolder4" native="true"/>
-   </item>
-   <item>
-    <widget class="NewGeneVariableSummaryHolder" name="widgetHolder5" native="true"/>
+    <widget class="QScrollArea" name="scrollArea">
+     <property name="widgetResizable">
+      <bool>true</bool>
+     </property>
+     <widget class="NewGeneVariableSummaryScrollArea" name="scrollAreaWidgetContents">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>541</width>
+        <height>406</height>
+       </rect>
+      </property>
+     </widget>
+    </widget>
    </item>
   </layout>
  </widget>
  <customwidgets>
   <customwidget>
-   <class>NewGeneVariableSummaryHolder</class>
+   <class>NewGeneVariableSummaryScrollArea</class>
    <extends>QWidget</extends>
-   <header location="global">newgenevariablesummaryholder.h</header>
+   <header>newgenevariablesummaryscrollarea.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
