--- a/NewGeneUI/NewGene/CreateOutput/newgenecreateoutput.ui
+++ b/NewGeneUI/NewGene/CreateOutput/newgenecreateoutput.ui
@@ -16,14 +16,32 @@
   <property name="styleSheet">
    <string notr="true"/>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <property name="margin">
-    <number>0</number>
-   </property>
+  <layout class="QVBoxLayout" name="verticalLayout">
    <property name="spacing">
     <number>0</number>
    </property>
-   <item row="0" column="0">
+   <property name="margin">
+    <number>0</number>
+   </property>
+   <item>
+    <widget class="QLabel" name="label">
+     <property name="styleSheet">
+      <string notr="true">QLabel
+{
+	background-color : #fde0d3;
+	font-weight: bold;
+	font-size: 20px;
+}</string>
+     </property>
+     <property name="text">
+      <string>Create Output Dataset</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="NewGeneTabWidget" name="tabWidgetOutput">
      <property name="styleSheet">
       <string notr="true">
