Remove dummy text in some widgets, prior to work of actually tying loading of data into the backend.

--- a/NewGeneUI/NewGene/CreateOutput/SelectVariables/VariableSummary/newgenevariablesummarygroup.ui
+++ b/NewGeneUI/NewGene/CreateOutput/SelectVariables/VariableSummary/newgenevariablesummarygroup.ui
@@ -20,7 +20,7 @@
    <item>
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>Yo No!</string>
+      <string/>
      </property>
     </widget>
    </item>
