--- a/NewGeneUI/NewGene/CreateOutput/SelectVariables/Variables/newgenevariablegroup.ui
+++ b/NewGeneUI/NewGene/CreateOutput/SelectVariables/Variables/newgenevariablegroup.ui
@@ -17,7 +17,7 @@
    <item row="0" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>Yi hi!</string>
+      <string/>
      </property>
     </widget>
    </item>
