--- a/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/Variables/newgenevariablegroup.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/Variables/newgenevariablegroup.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
-    <widget class="QListWidget" name="listWidget"/>
+    <widget class="QListView" name="listView"/>
    </item>
   </layout>
  </widget>
