--- a/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/VariableSummary/newgenevariablesummarygroup.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/VariableSummary/newgenevariablesummarygroup.ui
@@ -18,6 +18,9 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
+    <widget class="QListView" name="listView"/>
+   </item>
+   <item>
     <widget class="QLabel" name="label">
      <property name="text">
       <string/>
