Add stylesheet to K-ad spin controls to change font color and make font bold.

--- a/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/kadcolumnselectionbox.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/kadcolumnselectionbox.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>427</width>
+    <height>71</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,13 +20,9 @@
    <enum>QFrame::Raised</enum>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
-   <item>
-    <widget class="QLabel" name="label">
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-   </item>
+   <property name="margin">
+    <number>0</number>
+   </property>
    <item>
     <widget class="QScrollArea" name="scrollArea">
      <property name="frameShape">
@@ -49,8 +45,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>380</width>
-        <height>261</height>
+        <width>425</width>
+        <height>69</height>
        </rect>
       </property>
      </widget>
