--- a/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/timerangebox.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/timerangebox.ui
@@ -43,14 +43,14 @@
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
-        <widget class="QDateTimeEdit" name="dateTimeEdit_2">
+        <widget class="NewGeneDateTimeWidget" name="dateTimeEdit">
          <property name="calendarPopup">
           <bool>true</bool>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QDateTimeEdit" name="dateTimeEdit">
+        <widget class="NewGeneDateTimeWidget" name="dateTimeEdit_2">
          <property name="calendarPopup">
           <bool>true</bool>
          </property>
@@ -62,6 +62,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>NewGeneDateTimeWidget</class>
+   <extends>QDateTimeEdit</extends>
+   <header>newgenedatetimewidget.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
