--- a/NewGeneUI/NewGene/Widgets/CreateOutput/newgenecreateoutput.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/newgenecreateoutput.ui
@@ -97,7 +97,7 @@ background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
       <enum>QTabWidget::South</enum>
      </property>
      <property name="currentIndex">
-      <number>0</number>
+      <number>2</number>
      </property>
      <property name="documentMode">
       <bool>true</bool>
@@ -194,7 +194,7 @@ border-bottom: 5px solid qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
         <number>0</number>
        </property>
        <item row="0" column="0">
-        <widget class="QWidget" name="widget_3" native="true">
+        <widget class="NewGeneGenerateOutput" name="widget_3" native="true">
          <property name="styleSheet">
           <string notr="true">QWidget {
 border-bottom: 0px;
@@ -219,6 +219,12 @@ border-bottom: 0px;
    <class>NewGeneSelectVariables</class>
    <extends>QWidget</extends>
    <header location="global">newgeneselectvariables.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>NewGeneGenerateOutput</class>
+   <extends>QWidget</extends>
+   <header>newgenegenerateoutput.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
