--- a/NewGeneUI/NewGene/Widgets/CreateOutput/newgenecreateoutput.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/newgenecreateoutput.ui
@@ -97,7 +97,7 @@ background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
       <enum>QTabWidget::South</enum>
      </property>
      <property name="currentIndex">
-      <number>0</number>
+      <number>2</number>
      </property>
      <property name="documentMode">
       <bool>true</bool>
@@ -132,7 +132,7 @@ border-bottom: 5px solid qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
         <number>0</number>
        </property>
        <item row="0" column="0">
-        <widget class="NewGeneSelectVariables" name="widget" native="true">
+        <widget class="NewGeneSelectVariables" name="widgetSelectVariablesPane" native="true">
          <property name="styleSheet">
           <string notr="true">QWidget {
 border-bottom: 0px;;
@@ -163,7 +163,7 @@ border-bottom: 5px solid qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
         <number>0</number>
        </property>
        <item row="0" column="0">
-        <widget class="QWidget" name="widget_2" native="true">
+        <widget class="QWidget" name="widgetColumnOrderPane" native="true">
          <property name="styleSheet">
           <string notr="true">QWidget {
 border-bottom: 0px;
@@ -194,7 +194,7 @@ border-bottom: 5px solid qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
         <number>0</number>
        </property>
        <item row="0" column="0">
-        <widget class="NewGeneGenerateOutput" name="widget_3" native="true">
+        <widget class="NewGeneGenerateOutput" name="widgetOutputPane" native="true">
          <property name="styleSheet">
           <string notr="true">QWidget {
 border-bottom: 0px;
