--- a/NewGeneUI/NewGene/Widgets/CreateOutput/GenerateOutput/newgenegenerateoutput.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/GenerateOutput/newgenegenerateoutput.ui
@@ -160,7 +160,7 @@
         <bool>true</bool>
        </property>
        <property name="backgroundVisible">
-        <bool>true</bool>
+        <bool>false</bool>
        </property>
       </widget>
      </item>
