--- a/NewGeneUI/NewGene/Widgets/CreateOutput/GenerateOutput/newgenegenerateoutput.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/GenerateOutput/newgenegenerateoutput.ui
@@ -169,6 +169,9 @@
        <property name="text">
         <string/>
        </property>
+       <property name="indent">
+        <number>5</number>
+       </property>
       </widget>
      </item>
     </layout>
