--- a/NewGeneUI/NewGene/Widgets/CreateOutput/newgenecreateoutput.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/newgenecreateoutput.ui
@@ -28,8 +28,8 @@
      <property name="styleSheet">
       <string notr="true">QLabel
 {
-	background-color : #fde0d3;
-	font-weight: bold;
+	background-color : #336611;
+	color: #eeeeee;
 	font-size: 20px;
 }</string>
      </property>
@@ -153,7 +153,7 @@ border-bottom: 5px solid qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
 }</string>
       </property>
       <attribute name="title">
-       <string> Choose output destination </string>
+       <string>Perform run</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_5">
        <property name="margin">
