--- a/NewGeneUI/NewGene/Widgets/CreateOutput/newgenecreateoutput.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/newgenecreateoutput.ui
@@ -113,7 +113,7 @@ border-bottom: 5px solid qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
 }</string>
       </property>
       <attribute name="title">
-       <string> Select variables </string>
+       <string> Select variables and timerange</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_2">
        <property name="leftMargin">
@@ -153,7 +153,7 @@ border-bottom: 5px solid qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
 }</string>
       </property>
       <attribute name="title">
-       <string>Perform run</string>
+       <string>Prepare run</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_5">
        <property name="margin">
