Debug merging of top-level groups via. recent algorithm changes.

--- a/NewGeneUI/NewGene/Widgets/CreateOutput/GenerateOutput/newgenegenerateoutput.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/GenerateOutput/newgenegenerateoutput.ui
@@ -68,7 +68,7 @@
         </size>
        </property>
        <property name="text">
-        <string>Choose...</string>
+        <string>Choose location...</string>
        </property>
       </widget>
      </item>
