--- a/NewGeneUI/NewGene/Widgets/CreateOutput/GenerateOutput/newgenegenerateoutput.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/GenerateOutput/newgenegenerateoutput.ui
@@ -165,6 +165,30 @@
       </widget>
      </item>
      <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_4">
+       <item>
+        <spacer name="horizontalSpacer_3">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pushButton_cancel">
+         <property name="text">
+          <string>Cancel</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
       <widget class="QLabel" name="labelOngoingPerformance">
        <property name="text">
         <string/>
