--- a/NewGeneUI/NewGene/Widgets/CreateOutput/GenerateOutput/newgenegenerateoutput.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/GenerateOutput/newgenegenerateoutput.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>824</width>
-    <height>300</height>
+    <height>307</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -167,17 +167,23 @@
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_4">
        <item>
-        <spacer name="horizontalSpacer_3">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
+        <widget class="QLabel" name="labelOngoingPerformance">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+           <horstretch>1</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
          </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>20</height>
-          </size>
+         <property name="text">
+          <string/>
          </property>
-        </spacer>
+         <property name="textFormat">
+          <enum>Qt::RichText</enum>
+         </property>
+         <property name="indent">
+          <number>5</number>
+         </property>
+        </widget>
        </item>
        <item>
         <widget class="QPushButton" name="pushButton_cancel">
@@ -187,16 +193,6 @@
         </widget>
        </item>
       </layout>
-     </item>
-     <item>
-      <widget class="QLabel" name="labelOngoingPerformance">
-       <property name="text">
-        <string/>
-       </property>
-       <property name="indent">
-        <number>5</number>
-       </property>
-      </widget>
      </item>
     </layout>
    </item>
