--- a/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/timerangebox.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/timerangebox.ui
@@ -139,11 +139,17 @@
        </item>
        <item>
         <widget class="QLineEdit" name="randomSamplingHowManyRows">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
          <property name="inputMask">
-          <string>00000000000000000000000000000000; </string>
+          <string/>
          </property>
          <property name="maxLength">
-          <number>32</number>
+          <number>32767</number>
          </property>
         </widget>
        </item>
