--- a/NewGeneUI/NewGene/Widgets/newgenemainwindow.ui
+++ b/NewGeneUI/NewGene/Widgets/newgenemainwindow.ui
@@ -145,14 +145,18 @@ border-bottom: 9px solid qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
     <property name="title">
      <string>Input</string>
     </property>
+    <addaction name="actionNew_Input_Dataset"/>
     <addaction name="actionOpen_Input_Dataset"/>
+    <addaction name="actionSave"/>
     <addaction name="actionClose_Current_Input_Dataset"/>
    </widget>
    <widget class="QMenu" name="menuOutput">
     <property name="title">
      <string>Output</string>
     </property>
+    <addaction name="actionNew_Output_Dataset"/>
     <addaction name="actionOpen_Output_Dataset"/>
+    <addaction name="actionSave_Output_Dataset_As"/>
     <addaction name="actionClose_Current_Output_Dataset"/>
    </widget>
    <addaction name="menuInput"/>
@@ -177,6 +181,26 @@ border-bottom: 9px solid qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
   <action name="actionClose_Current_Output_Dataset">
    <property name="text">
     <string>Close Current Output Dataset</string>
+   </property>
+  </action>
+  <action name="actionNew_Input_Dataset">
+   <property name="text">
+    <string>New Input Dataset</string>
+   </property>
+  </action>
+  <action name="actionSave">
+   <property name="text">
+    <string>Save Input Dataset As...</string>
+   </property>
+  </action>
+  <action name="actionNew_Output_Dataset">
+   <property name="text">
+    <string>New Output Dataset...</string>
+   </property>
+  </action>
+  <action name="actionSave_Output_Dataset_As">
+   <property name="text">
+    <string>Save Output Dataset As...</string>
    </property>
   </action>
  </widget>
