--- a/NewGeneUI/NewGene/Widgets/newgenemainwindow.ui
+++ b/NewGeneUI/NewGene/Widgets/newgenemainwindow.ui
@@ -147,7 +147,7 @@ border-bottom: 9px solid qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
     </property>
     <addaction name="actionNew_Input_Dataset"/>
     <addaction name="actionOpen_Input_Dataset"/>
-    <addaction name="actionSave"/>
+    <addaction name="actionSave_Input_Dataset_As"/>
     <addaction name="actionClose_Current_Input_Dataset"/>
    </widget>
    <widget class="QMenu" name="menuOutput">
@@ -188,7 +188,7 @@ border-bottom: 9px solid qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
     <string>New Input Dataset</string>
    </property>
   </action>
-  <action name="actionSave">
+  <action name="actionSave_Input_Dataset_As">
    <property name="text">
     <string>Save Input Dataset As...</string>
    </property>
