"Manage Input" tabs positioned (DMU's, UOA's, VG's, and data)

--- a/NewGeneUI/NewGene/Widgets/ManageInput/DMUs/newgenemanagedmus.ui
+++ b/NewGeneUI/NewGene/Widgets/ManageInput/DMUs/newgenemanagedmus.ui
@@ -2,7 +2,7 @@
  <author></author>
  <comment></comment>
  <exportmacro></exportmacro>
- <class>Form</class>
+ <class>NewGeneManageDMUs</class>
  <widget class="QWidget" name="Form" >
   <property name="geometry" >
    <rect>
