--- a/NewGeneUI/NewGene/Widgets/ManageInput/UOAs/newgenemanageuoas.ui
+++ b/NewGeneUI/NewGene/Widgets/ManageInput/UOAs/newgenemanageuoas.ui
@@ -2,7 +2,7 @@
  <author></author>
  <comment></comment>
  <exportmacro></exportmacro>
- <class>Form</class>
+ <class>NewGeneManageUOAs</class>
  <widget class="QWidget" name="Form" >
   <property name="geometry" >
    <rect>
