--- a/NewGeneUI/NewGene/Widgets/ManageInput/DMUs/newgenemanagedmus.ui
+++ b/NewGeneUI/NewGene/Widgets/ManageInput/DMUs/newgenemanagedmus.ui
@@ -25,7 +25,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QWidget" name="widget" native="true">
+    <widget class="DisplayDMUsRegion" name="widget" native="true">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
        <horstretch>0</horstretch>
@@ -36,6 +36,14 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>DisplayDMUsRegion</class>
+   <extends>QWidget</extends>
+   <header>displaydmusregion.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
