Introduce some custom QEVENT enums, and use them to post events to attempt to allow UI cycle to complete both for closing a popup dialog before automatically showing another one, and for completing a selection of a VG in the list view in the VG management pane.

--- a/NewGeneUI/NewGene/Widgets/ManageInput/VGs/newgenemanagevgs.ui
+++ b/NewGeneUI/NewGene/Widgets/ManageInput/VGs/newgenemanagevgs.ui
@@ -61,7 +61,7 @@
             <item>
              <widget class="QPushButton" name="pushButton_add_vg">
               <property name="text">
-               <string> Add new empty Variable Group </string>
+               <string> Add new Variable Group </string>
               </property>
              </widget>
             </item>
