Actually save the UI object name change to disk before building :)

--- a/NewGeneUI/NewGene/Widgets/ManageInput/VGs/newgenemanagevgs.ui
+++ b/NewGeneUI/NewGene/Widgets/ManageInput/VGs/newgenemanagevgs.ui
@@ -99,7 +99,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QLabel" name="label">
+       <widget class="QLabel" name="label_importProgress">
         <property name="text">
          <string>Import progress</string>
         </property>
