Add progress bar to DMU import

--- a/NewGeneUI/NewGene/Widgets/ManageInput/DMUs/displaydmusregion.ui
+++ b/NewGeneUI/NewGene/Widgets/ManageInput/DMUs/displaydmusregion.ui
@@ -152,6 +152,20 @@
      </widget>
     </widget>
    </item>
+   <item>
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>TextLabel</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QProgressBar" name="progressBar">
+     <property name="value">
+      <number>24</number>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources/>
