--- a/NewGeneUI/NewGene/Widgets/ManageInput/DMUs/displaydmusregion.ui
+++ b/NewGeneUI/NewGene/Widgets/ManageInput/DMUs/displaydmusregion.ui
@@ -160,7 +160,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QProgressBar" name="progressBar">
+    <widget class="QProgressBar" name="progressBar_importDMU">
      <property name="value">
       <number>24</number>
      </property>
